--- a/src/app/sport-game-list/sport-game-list.component.html
+++ b/src/app/sport-game-list/sport-game-list.component.html
@@ -2,27 +2,26 @@
 <div class="row">
   <div class="col-md-12">
 	<div class="table-responsive">
-	  <table mat-table [dataSource]="games" class="mat-elevation -z8">
-		<ng-container matColumnDef="sportGameId">
-		  <th mat-header-cell *matHeaderCellDef>Game Id</th>
-		  <td mat-cell *matCellDef="let game">{{game.sportGameId}}</td>
+	  <table mat-table [dataSource]="signalRService.data" class="mat-elevation -z8">
+		<ng-container matColumnDef="id">
+		  <th mat-header-cell *matHeaderCellDef>Game</th>
+		  <td mat-cell *matCellDef="let game">#{{game.id}}</td>
 		</ng-container>
-		<ng-container matColumnDef="sportGameTeams">
-		  <th mat-header-cell *matHeaderCellDef>Teams</th>
-		  <td mat-cell *matCellDef="let game">
-			<div>{{game.sportGameTeams[0].score}}</div>
-			<div>{{game.sportGameTeams[0].teamName}}</div>
-			<div>{{game.sportGameTeams[1].score}}</div>
-			<div>{{game.sportGameTeams[1].teamName}}</div>
-		  </td>
+		<ng-container matColumnDef="team1">
+		  <th mat-header-cell *matHeaderCellDef>Team 1</th>
+		  <td mat-cell *matCellDef="let game"><div>{{game.team1Score}}</div><div>{{game.team1Name}}</div></td>
 		</ng-container>
-		<ng-container matColumnDef="sportGameStartTime">
+		<ng-container matColumnDef="team2">
+		  <th mat-header-cell *matHeaderCellDef>Team 2</th>
+		  <td mat-cell *matCellDef="let game"><div>{{game.team2Score}}</div><div>{{game.team2Name}}</div></td>
+		</ng-container>
+		<ng-container matColumnDef="startTime">
 		  <th mat-header-cell *matHeaderCellDef>Start Time</th>
-		  <td mat-cell *matCellDef="let game">{{game.sportGameStartTime}}</td>
+		  <td mat-cell *matCellDef="let game">{{game.startTime | date : "dd.MM.y HH:mm"}}</td>
 		</ng-container>
-		<ng-container matColumnDef="sportGameEndTime">
+		<ng-container matColumnDef="endTime">
 		  <th mat-header-cell *matHeaderCellDef>End Time</th>
-		  <td mat-cell *matCellDef="let game">{{game.sportGameEndTime}}</td>
+		  <td mat-cell *matCellDef="let game">{{game.endTime | date : "dd.MM.y HH:mm"}}</td>
 		</ng-container>
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
